force-app/main/default/objects/UlsCalculatorConfig__mdt/UlsCalculatorConfig__mdt.object-meta.xml
<CustomObject>
    <label>ULS Calculator Config</label>
    <pluralLabel>ULS Calculator Configs</pluralLabel>
</CustomObject>