force-app/main/default/objects/UlsCalculatorConfig__mdt/fields/CalloutTimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeoutMs__c</fullName>
    <label>Callout Timeout Ms</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>