force-app/main/default/objects/UlsCalculatorConfig__mdt/fields/EnableDetailedLogging__c.field-meta.xml
<CustomField>
    <fullName>EnableDetailedLogging__c</fullName>
    <label>Enable Detailed Logging</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>