force-app/main/default/objects/UlsCalculatorConfig__mdt/fields/IncludeSuccessLogs__c.field-meta.xml
<CustomField>
    <fullName>IncludeSuccessLogs__c</fullName>
    <label>Include Success Logs</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>