force-app/main/default/objects/UlsCalculatorConfig__mdt/fields/IsCalculatorEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsCalculatorEnabled__c</fullName>
    <label>Is Calculator Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>