force-app/main/default/objects/UlsCalculatorConfig__mdt/fields/IsDocumentGenerationEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsDocumentGenerationEnabled__c</fullName>
    <label>Is Document Generation Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>